mudança em olámundo

--- a/olámundo.html
+++ b/olámundo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        document.write('Olá mundo !!!<br>')
+        document.write('Olá serzinho !!!<br>')
         let nome = prompt('Qual é o seu nome')
         document.write('Olá ', nome, '!!!')
 
