mudança em verificanumero

--- a/verificanumero.html
+++ b/verificanumero.html
@@ -20,7 +20,7 @@
         if (numero < 0){
             document.write("O número não é positivo.")
         }
-        
+        else
     </script>
     
 </body>
